Застилизировал главную страницу

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,55 @@
-// Начните писать стили здесь
+// Доступное скрытие
+@import "general/visually-hidden.less";
+
+// Переменные
+@import "general/variables.less";
+
+// Миксины
+@import "general/mixins.less";
+
+// page
+@import "blocks/page.less";
+
+// header
+@import "blocks/page-header.less";
+@import "blocks/main-navigation.less";
+
+// app
+@import "blocks/app.less";
+@import "blocks/app-list.less";
+
+// features
+@import "blocks/features.less";
+@import "blocks/feature-item.less";
+
+// fact
+@import "blocks/fact.less";
+
+// reviews
+@import "blocks/reviews.less";
+@import "blocks/reviews-item.less";
+
+// slide controls
+@import "blocks/slide-controls.less";
+
+// price
+@import "blocks/price.less";
+
+// head cell
+@import "blocks/head-cell.less";
+
+// table cell
+@import "blocks/table-cell.less";
+
+// contacts
+@import "blocks/contacts.less";
+@import "blocks/contacts-item.less";
+
+//page footer
+@import "blocks/page-footer.less";
+
+// authors
+
+@import "blocks/authors.less";
+
+
