Исправил ошибки от npm test

--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -2,7 +2,8 @@
   background-color: @white;
 }
 
-.features__title, .features__subtitle {
+.features__title,
+.features__subtitle {
   font-style: normal;
   font-weight: 300;
   font-size: 24px;
