--- a/source/less/blocks/slide-controls.less
+++ b/source/less/blocks/slide-controls.less
@@ -2,7 +2,6 @@
   .list-reset();
   display: flex;
   align-items: center;
-
 }
 
 .slide-controls__button {
@@ -13,18 +12,14 @@
   border-radius: 50%;
   background-color: @gray;
   opacity: 0.3;
-
-  &--active {
-    width: 6px;
-    height: 6px;
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    border-radius: 50%;
-    border: 3px solid @gray;
-    box-sizing: content-box;
-  }
 }
 
-
-
+.slide-controls__button--active {
+  width: 6px;
+  height: 6px;
+  background-color: transparent;
+  padding: 0;
+  border-radius: 50%;
+  border: 3px solid @gray;
+  box-sizing: content-box;
+}
