--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,6 @@
+// Fonts
+@import "general/fonts.less";
+
 // Доступное скрытие
 @import "general/visually-hidden.less";
 
@@ -27,7 +30,6 @@
 
 // reviews
 @import "blocks/reviews.less";
-@import "blocks/reviews-item.less";
 
 // slide controls
 @import "blocks/slide-controls.less";
@@ -49,5 +51,4 @@
 @import "blocks/page-footer.less";
 
 // authors
-
 @import "blocks/authors.less";
