Застилизовал form.html

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -52,3 +52,18 @@
 
 // authors
 @import "blocks/authors.less";
+
+// content-title
+@import "blocks/content-title.less";
+
+// form
+@import "blocks/form.less";
+
+// text-field
+@import "blocks/text-field.less";
+
+// select-field
+@import "blocks/select-field.less";
+
+// message-field
+@import "blocks/message-field.less";
