--- a/source/less/style.less
+++ b/source/less/style.less
@@ -67,3 +67,18 @@
 
 // message-field
 @import "blocks/message-field.less";
+
+// gallery
+@import "blocks/gallery.less";
+
+// blog-post
+@import "blocks/blog-post.less";
+
+// editor
+@import "blocks/editor.less";
+
+// editor-buttons
+@import "blocks/editor-buttons.less";
+
+// editor-ranges
+@import "blocks/editor-ranges.less";
