--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -2,8 +2,25 @@
   background-color: @white;
 }
 
+.page-footer__inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @media (min-width: @tablet) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
 .page-footer__list {
   .list-reset();
+  display: flex;
+  margin: 40px 0;
+
+  @media (min-width: @desktop) {
+    margin: 70px 0;
+  }
 }
 
 .page-footer__link {
@@ -13,4 +30,5 @@
   border: 3px solid @gray;
   border-radius: 50%;
   opacity: 0.3;
+  margin: 0 7px;
 }
