--- a/source/less/general/variables.less
+++ b/source/less/general/variables.less
@@ -6,3 +6,8 @@
 @company-color: #D22856;
 @input-border: #E5E5E5;
 @submit-button: #2AAB6D;
+
+// Разрешения
+@mobile: 320px;
+@tablet: 660px;
+@desktop: 1200px;
