--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,6 +4,9 @@
 // Доступное скрытие
 @import "general/visually-hidden.less";
 
+// container.less
+@import "blocks/container.less";
+
 // Переменные
 @import "general/variables.less";
 
