--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -1,4 +1,9 @@
 .features {
+  background-color: @light-background;
+}
+
+.features__slogan {
+  padding: 46px 0 36px 0;
   background-color: @white;
 }
 
@@ -9,9 +14,64 @@
   font-size: 24px;
   line-height: 120%;
   color: @gray;
+  text-align: center;
+  margin: 0;
+
+  @media (min-width: @tablet) {
+    font-style: normal;
+    font-weight: 300;
+    font-size: 40px;
+    line-height: 54px;
+  }
+
+  @media (min-width: @desktop) {
+    font-style: normal;
+    font-weight: 300;
+    font-size: 50px;
+    line-height: 68px;
+  }
+}
+
+.features__title {
+  margin-bottom: 24px;
+
+  @media (min-width: @tablet) {
+    margin-bottom: 0;
+  }
 }
 
 .features__list {
   .list-reset();
+
+  @media (min-width: @tablet) {
+    grid-column-start: 2;
+  }
+
+  @media (min-width: @desktop) {
+    grid-column-start: 1;
+  }
+
+  padding-top: 55px;
+  display: flex;
+  flex-direction: column;
   background-color: @light-background;
+
+  @media (min-width: @desktop) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.features__inner {
+  display: grid;
+  grid-template-columns: 1fr;
+  position: relative;
+
+  @media (min-width: @tablet) {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (min-width: @desktop) {
+    grid-template-columns: 1fr;
+  }
 }
