--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -1,3 +1,40 @@
 .price {
   background-color: @light-background;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+}
+
+.price-table {
+  margin-top: 80px;
+
+  @media (min-width: @tablet) {
+    margin-bottom: 70px;
+  }
+
+  @media (min-width: @desktop) {
+    margin-bottom: 100px;
+  }
+}
+
+.price-table__row td:first-child {
+  display: none;
+
+  @media (min-width: @tablet) {
+    display: table-cell;
+  }
+}
+
+.price-table__row .head-cell:first-child {
+  empty-cells: hide;
+}
+
+.price__controls {
+  margin-top: 50px;
+  margin-bottom: 50px;
+
+  @media (min-width: @tablet) {
+    display: none;
+  }
 }
