--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -1,9 +1,31 @@
 .reviews {
   background-color: @white;
+  padding-top: 50px;
+
+  @media (min-width: @tablet) {
+    padding-top: 110px;
+  }
+}
+
+.reviews__inner {
+  position: relative;
 }
 
 .reviews__list {
   .list-reset();
+
+  @media (min-width: @desktop) {
+    margin: 0 100px;
+  }
+}
+
+.review-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.reviews__item:nth-child(2n+1) {
+  display: none;
 }
 
 .review-item__name {
@@ -11,10 +33,26 @@
   font-weight: bold;
   font-size: 18px;
   line-height: 30px;
+  text-align: center;
+
+  @media (min-width: @tablet) {
+    order: 2;
+  }
 }
 
 .review-item__description {
   display: none;
+  text-align: center;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 30px;
+  color: @gray;
+
+  @media (min-width: @tablet) {
+    display: block;
+    order: 3;
+  }
 }
 
 .review-item__text {
@@ -22,4 +60,33 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 30px;
+  margin: 0;
+  text-align: center;
+
+  @media (min-width: @tablet) {
+    order: 1;
+  }
+}
+
+.reviews__controls {
+  margin-top: 45px;
+  margin-bottom: 20px;
+
+  @media (min-width: @desktop) {
+    display: none;
+  }
+}
+
+.reviews__desktop-controls {
+  display: none;
+
+  @media (min-width: @desktop) {
+    display: flex;
+  }
+
+  position: absolute;
+  justify-content: space-between;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
